*** Version 2.5.7   (6 mars 2017)   ***
- Améliorations
LDAP : Compatibilité Active Directory
LDAP : Test des paramètres depuis la page de configuration
Mail : Test des paramètres depuis la page de configuration

- Securité
Mise à jour de PHPMailer (version 2.5.22)

*** Version 2.5.6   (6 mars 2017)   ***
- Corrections
Corrige l'agenda : barre les postes pour lesquels l'agent est absent

*** Version 2.5.5   (6 mars 2017)   ***
- Améliorations
Ajoute un index sur le champ site de la table pl_poste de façon à accélérer les requêtes SQL sur cette table (page planning)
Améliore l'affichage du menu permettant de placer les agents dans le planning (Optimisation de la largeur du 2nd tableau)

*** Version 2.5.4   (1er mars 2017)   ***
- Améliorations
Affichage des heures au format 12h34 (Heure, lettre h, minutes) dans toutes les pages de statistiques

- Sécurité
Correction des vulnérabilités Potential DOM Open Redirect
Correction de vulnérabilités XSRF (celles liées à la fonction db::update2)

*** Version 2.5.3   (6 février 2017)   ***
- Améliorations
Optimisation de la fonction nom() : moins de latence dans de nombreux modules, notamemnt dans le menu permettant de placer les agents dans le planning
Affichage des absences non validées dans les plannings : les absences non validées apparaîssent en rouge mais ne sont pas barrées. Paramétrable
Affichage des heures au format 12h34 (Heure, lettre h, minutes) dans le menu du planning et dans la feuille de temps
Amélioration de la modification des menus (groupes de postes, étages des postes, services de rattachement)
Feuille de temps : affichage jour par jour des heures par groupe.

- Corrections
Correction de la fonction createURL : ajout d'un / manquant dans certaines URL

*** Version 2.5.2   (15 décembre 2016)   ***
- Améliorations
Absence en bas du planning : n'affiche que les absences qui concernent le site choisi