@@ -6,6 +6,7 @@ Mail : Test des paramètres depuis la page de configuration
 
 - Securité
 Mise à jour de PHPMailer (version 2.5.22)
+Clé personnelle pour le cryptage des mots de passe LDAP et SMTP (include/config.php à modifier manuellement si mise à jour)
 
 *** Version 2.5.6   (6 mars 2017)   ***
 - Corrections
